--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,20 +14,6 @@ jobs:
           cmake ..
           make
           make test
-  Test_Add:
-    runs-on: ubuntu-latest
-    needs: Compilation
-    steps:
-      - name: Test fonction add
-        run: |
-          last_directory=$(basename ${{ runner.workspace }})
-          git clone https://github.com/${{ github.repository }}.git
-          cd ./$last_directory
-          mkdir build
-          cd build
-          cmake ..
-          make
-          ./src/calculator add 10 5
   Test_Sub:
     runs-on: ubuntu-latest
     needs: Compilation
@@ -85,4 +71,24 @@ jobs:
           cmake ..
           make
           ./src/calculator car 5
-          
+  Test_Add:
+    runs-on: ubuntu-latest
+    needs: Compilation
+    steps:
+      - name: Test fonction add
+        run: |
+          last_directory=$(basename ${{ runner.workspace }})
+          git clone https://github.com/${{ github.repository }}.git
+          cd ./$last_directory
+          mkdir build
+          cd build
+          cmake ..
+          make
+          ./src/calculator add 10 5
+  Deployment:
+    runs-on: ubuntu-latest
+    needs: [Test_Add, Test_Sub, Test_Mul, Test_Div, Test_Car]
+    steps:
+      - name: deploy the code
+        run: |
+          echo "code deploy"          
