Update deployment message to French

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -91,4 +91,4 @@ jobs:
     steps:
       - name: deploy the code
         run: |
-          echo "code deploy"          
+          echo "Déploiement de la solution"
