--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -129,3 +129,10 @@ jobs:
           echo '' >> $GITHUB_STEP_SUMMARY
           cat build/report.txt >> $GITHUB_STEP_SUMMARY
           echo '' >> $GITHUB_STEP_SUMMARY
+  Deployment:
+    runs-on: ubuntu-latest
+    needs: [Test_Add, Test_Sub, Test_Mul, Test_Div, Test_Car]
+    steps:
+    - name: deploy the code
+      run: |
+        echo "Déploiement de la solution"       
